--- a/aj.css
+++ b/aj.css
@@ -73,7 +73,7 @@ body {
 
 /* hwero */
 .hero-section {
-  background-image: url('Map of Indonesia.jpg');
+  background-image: url('assets/Map\ of\ Indonesia.jpg');
   background-size: cover;
   background-position: center;
   height: 400px;
