--- a/respon.css
+++ b/respon.css
@@ -153,6 +153,34 @@ font-size: 16px;
         font-size: 10px;
         padding: 4px 8px;
     }
+
+    .kelas-scroll-wrapper {
+        flex-wrap: nowrap !important;
+        overflow-x: auto;
+        overflow-y: hidden;
+        -webkit-overflow-scrolling: touch;
+        display: flex;
+        gap: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    .kotak-kelas {
+        flex: 0 0 auto;
+        width: 75%; /* atau 280px jika ingin tetap */
+    }
+
+    .kelas-scroll-wrapper::-webkit-scrollbar {
+        height: 6px;
+    }
+
+    .kelas-scroll-wrapper::-webkit-scrollbar-thumb {
+        background-color: #999;
+        border-radius: 10px;
+    }
+
+    .kelas-scroll-wrapper::-webkit-scrollbar-track {
+        background-color: #eee;
+    }
 }
     @media screen and (max-width: 375px) {
         /* hero section */
