--- a/respon.css
+++ b/respon.css
@@ -193,6 +193,19 @@ font-size: 16px;
     .kelas-scroll-wrapper::-webkit-scrollbar-track {
         background-color: #eee;
     }
+    .kelas-wrapper {
+    display: flex;
+    overflow-x: auto;
+    gap: 16px;
+    scroll-snap-type: x mandatory;
+    padding-bottom: 10px;
+    }
+
+    .kelas-item {
+        max-width: 220px;
+        flex-shrink: 0;
+        scroll-snap-align: center;
+    }
 }
     @media screen and (max-width: 375px) {
         /* hero section */
